# pt-litethinking-backend

./: .gitignore  .vercelignore  ARCHITECTURE.md  POSTMAN_GUIDE.md  README.md  VERCEL_DEPLOY.md  generate_secret_key.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
config/: settings.py  urls.py
empresas/: models.py
empresas/migrations/: 0001_initial.py
productos/: models.py
productos/migrations/: 0001_initial.py
src/litethinking/application/: __init__.py
src/litethinking/application/use_cases/: __init__.py  empresa_use_cases.py  producto_use_cases.py
src/litethinking/domain/: __init__.py
src/litethinking/domain/entities/: __init__.py  empresa.py  producto.py
src/litethinking/domain/ports/: __init__.py  empresa_repository.py  producto_repository.py
src/litethinking/infrastructure/: __init__.py
src/litethinking/infrastructure/persistence/: __init__.py  admin.py  apps.py
src/litethinking/infrastructure/persistence/empresa/: __init__.py  model.py  repository_impl.py
src/litethinking/infrastructure/persistence/migrations/: 0001_initial_empresa.py  0002_initial_producto.py  0003_productomodel_descripcion.py  __init__.py
src/litethinking/infrastructure/persistence/producto/: __init__.py  model.py  repository_impl.py
src/litethinking/presentation/: __init__.py
src/litethinking/presentation/api/: __init__.py  permissions.py
src/litethinking/presentation/api/auth/: serializer.py  views.py
src/litethinking/presentation/api/empresa/: __init__.py  serializer.py  views.py
src/litethinking/presentation/api/inventario/: views.py
(+4 files in other folders)
